--- a/Eco-vestir/About-Us-main/Style.css
+++ b/Eco-vestir/About-Us-main/Style.css
@@ -47,10 +47,11 @@ a{
     background-color: #00999c;
     color: white;
     cursor: pointer;
+    text-decoration:none;
 }
 a:hover{
     transition: 1s;
-    background-color: #ecf5f5;
+    background-color: white;
     color: #00999c;
 }
 @media screen and (max-width:1200px){
