--- a/Eco-vestir/css/style.css
+++ b/Eco-vestir/css/style.css
@@ -14,6 +14,12 @@ body {
   margin: 0;
   padding: 0;
 }
+.fa-cart-shopping
+{
+  color: white;
+  font-size: 20px;
+  padding-left: 25px;
+}
 
 /*
     **root elements display block
